name:                tc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Atom.Types
                     , Set.Types
                     , Set.Utils
                     , Ta.Nd.Types
                     , Ta.Nd.Utils
                     , Ta.Ata.Types
                     , Ta.Ata.Utils
                     , Tt.Tdtt.Types
                     , Tt.Tdtt.Utils
                     , Parser.Parser
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , semigroups
                     , free
                     , transformers
                     , parsec
                     , exceptions
  default-language:    Haskell2010

executable tc
  hs-source-dirs:      app
  main-is:             tc.hs
  ghc-options:         -O2
  build-depends:       base
                     , tc
                     , mtl
                     , containers
                     , transformers
                     , parsec
                     , exceptions
  default-language:    Haskell2010

test-suite tc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
